# beautytips

./: CHANGELOG.md  Cargo.toml  README.md  cspell.json  release.toml
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yaml
crates/beautytips/: Cargo.toml
crates/beautytips/src/: actions.rs  errors.rs  lib.rs  vcs.rs
crates/beautytips/src/actions/: args.rs  inputs.rs  parse_arg.rs
crates/beautytips/src/actions/inputs/: cargo.rs
crates/beautytips/src/vcs/: git.rs  jj.rs
crates/cli/: Cargo.toml
crates/cli/src/: arg_parse.rs  builtin.rules  builtin_commands.rs  config.rs  github.rules  main.rs  reporter.rs  rules.toml  rust.rules  rust.toml  spell.rules  spell.toml
src/: actions.rs  arg_parse.rs  biome.toml  builtin.toml  builtin_commands.rs  config.rs  errors.rs  github.toml  lib.rs  main.rs  mypy.toml  reporter.rs  ruff.toml  rust.rules  rust.toml  spell.toml  toml.toml  util.rs  vcs.rs
src/actions/: args.rs  inputs.rs  parse_arg.rs
src/vcs/: git.rs  jj.rs
wix/: main.wxs
