# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2024 Tobias Hunger <tobias.hunger@gmail.com>

[workspace]

default-members = ["crates/beautytips", "crates/cli"]

members = ["crates/beautytips", "crates/cli"]
resolver = "2"

[workspace.package]
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2021"
homepage = "https://github.com/hunger/beautytips"
license = "GPL-3.0-or-later"
repository = "https://github.com/hunger/beautytips"
rust-version = "1.77"
version = "0.1.0"

[workspace.lints.clippy]
cargo = "warn"
complexity = "warn"
correctness = "forbid"
pedantic = "warn"
style = "warn"
suspicious = "warn"

[workspace.dependencies]
beautytips = { version = "=0.1.0", path = "crates/beautytips", default-features = false }
glob = { version = "0.3.1", default-features = false }
shell-words = { version = "1.1.0", default-features = true }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
