# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2024 Tobias Hunger <tobias.hunger@gmail.com>

[package]
authors = ["Tobias Hunger <tobias.hunger@gmail.com>"]
edition = "2021"
homepage = "https://github.com/hunger/beautytips"
license = "GPL-3.0-or-later"
repository = "https://github.com/hunger/beautytips"
rust-version = "1.77"
version = "0.1.0"
name = "beautytips"
description = "The beautytips code prettifier"
readme = "README.md"
keywords = ["prettifier", "code", "tool"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "beautytips"

[lints.clippy]
cargo = "warn"
multiple_crate_versions = { level = "allow", priority = 10 }
complexity = "warn"
correctness = "deny"
pedantic = "warn"
style = "warn"
suspicious = "warn"

[dependencies]
anyhow = { version = "1.0.86" }
async-trait = { version = "0.1.80" }
cargo_toml = { version = "0.20.2" }
clap = { version = "4.5.4", features = ["cargo", "env", "derive"] }
dirs = { version = "5.0.1" }
futures = { version = "0.3.30" }
glob = { version = "0.3.1", default-features = false }
ignore = { version = "0.4.22" }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
shell-words = { version = "1.1.0" }
termion = { version = "4.0.0" }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "process", "sync", "time", "fs"] }
toml = { version = "0.8.14", features = ["preserve_order"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
