# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2024 Tobias Hunger <tobias.hunger@gmail.com>

[package]
name = "beautytips"
description = "The beautytips code prettifier"
keywords = ["prettifier", "code", "tool"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.79"
futures = "0.3.30"
shell-escape = "0.1.5"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread", "process", "sync", "time"] }
tracing = "0.1.40"
