# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2024 Tobias Hunger <tobias.hunger@gmail.com>

[package]
name = "cli"
description = "CLI of the beautytips code prettifier"
readme = "README.md"
keywords = ["prettifier", "code", "tool"]
categories = ["command-line-utilities", "development-tools"]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "beautytips"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
beautytips = { workspace = true }
clap = { version = "4.5.4", features = ["cargo", "derive"] }
dirs = "5.0.1"
glob = { workspace = true }
shell-words = { workspace = true }
serde = { version = "1.0.199", features = ["derive"] }
termion = "4.0.0"
toml = { version = "0.8.12", features = ["preserve_order"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
